Add a keyword `_current_` for date.year
For ongoing events or era's provide _current_ in the year, this
gets replace by the current date.
Also the definition in the documentation is updated.

--- a/website/templates/docs/json-format.html
+++ b/website/templates/docs/json-format.html
@@ -256,7 +256,9 @@
         Yes
       </div>
       <div class="column-8">
-        A number. Don't use commas. BCE years should be negative numbers. Don't use the letters "BC", "BCE" or any others.
+        A number. Don't use commas. BCE years should be negative numbers. Don't use the letters "BC", "BCE" or any others.<br>
+        To present the <b>current</b> date for an ongoing event or era, insert the value <code>_current_</code>. This gets replaced by the current date during the loading of the events.
+        When this is used also provide a value for <b>display_date</b> when needed to show something like <b>present</b>, otherwise the datevalue is presented
       </div>
 
       <div class="column-2 column-6-phone">
